# sports-briefing

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: daily_brief.yml
briefs/: 2026-03-01.md  2026-03-02.md  2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-07.md  2026-03-08.md  2026-03-09.md  2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-14.md  2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-03-31.md  2026-04-01.md  2026-04-02.md  2026-04-03.md  2026-04-04.md  2026-04-05.md  2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  (+21 more)
sports_briefing/: config.py  main.py  models.py
sports_briefing/leagues/: base.py  formula1.py  nba.py  nhl.py  premier_league.py
sports_briefing/output/: renderer.py  terminal.py
sports_briefing/scoring/: engine.py  rivalries.py
sports_briefing/utils/: cache.py  http.py
